@@ -57,36 +57,6 @@ fi
 AC_MSG_RESULT([$ez_enable_debug])
 
 
-dnl MISC SYSTEM CHARACTERISTICS
-
-dnl __progname check adapted from OpenNTPd-portable configure.ac
-AC_MSG_CHECKING([whether libc defines __progname])
-AC_LINK_IFELSE(
-	[AC_LANG_PROGRAM([[#include <stdio.h>]],
-		[[extern char *__progname; printf("%s\n", __progname); ]])],
-	[ac_cv_libc_defines___progname="yes"],
-	[ac_cv_libc_defines___progname="no"]
-)
-if test x"$ac_cv_libc_defines___progname" = "xyes"; then
-	AC_MSG_RESULT([yes])
-	AC_DEFINE(HAVE___PROGNAME, 1, [Define whether libc defines __progname])
-else
-	AC_MSG_RESULT([no])
-fi
-
-AC_C_CONST
-AC_C_VOLATILE
-AC_TYPE_SIZE_T
-AC_CHECK_TYPES(ssize_t, ,
-	[AC_DEFINE_UNQUOTED(ssize_t, long, [Define to `long' if <sys/types.h> does not define.])], 
-[
-#ifdef HAVE_SYS_TYPES_H
-# include <sys/types.h>
-#endif
-])
-
-
-
 dnl USEFUL HEADERS
 
 AC_CHECK_HEADERS(sys/time.h paths.h signal.h langinfo.h libgen.h locale.h)
@@ -114,6 +84,35 @@ if test x"$ez_enable_debug" = "xyes"; then
 	fi
 fi
 AC_SUBST(COMPAT_INCLUDES)
+
+
+dnl MISC SYSTEM CHARACTERISTICS
+
+dnl __progname check adapted from OpenNTPd-portable configure.ac
+AC_MSG_CHECKING([whether libc defines __progname])
+AC_LINK_IFELSE(
+	[AC_LANG_PROGRAM([[#include <stdio.h>]],
+		[[extern char *__progname; printf("%s\n", __progname); ]])],
+	[ac_cv_libc_defines___progname="yes"],
+	[ac_cv_libc_defines___progname="no"]
+)
+if test x"$ac_cv_libc_defines___progname" = "xyes"; then
+	AC_MSG_RESULT([yes])
+	AC_DEFINE(HAVE___PROGNAME, 1, [Define whether libc defines __progname])
+else
+	AC_MSG_RESULT([no])
+fi
+
+AC_C_CONST
+AC_C_VOLATILE
+AC_TYPE_SIZE_T
+AC_TYPE_SSIZE_T
+AC_CHECK_TYPES(struct timeval, , ,
+[
+#ifdef HAVE_SYS_TIME_H
+# include <sys/time.h>
+#endif
+])
 
 
 dnl LIBRARY FUNCTIONS
